# NPP2

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile  README  configuration.cmake.in  index.html  svn.ignores
demo_src/: CMakeLists.txt
demo_src/autoencoder_usage/: CMakeLists.txt  ppmautoencoder.cpp
demo_src/basic_usage/: CMakeLists.txt  train_net.cpp
doc/api/: README
doc/latex/: Makefile  npp2.tex
examples/carrera/: images.list
examples/carrera/images/: klein_00000_red.pgm  klein_00001_red.pgm  klein_00002_red.pgm  klein_00003_red.pgm  klein_00004_red.pgm  klein_00005_red.pgm  klein_00006_red.pgm  klein_00007_red.pgm  klein_00008_red.pgm  klein_00009_red.pgm  klein_00010_red.pgm  klein_00011_red.pgm  klein_00012_red.pgm  klein_00013_red.pgm  klein_00014_red.pgm  klein_00015_red.pgm  klein_00016_red.pgm  klein_00017_red.pgm  klein_00018_red.pgm  klein_00019_red.pgm  klein_00020_red.pgm  klein_00021_red.pgm  klein_00022_red.pgm  klein_00023_red.pgm  klein_00024_red.pgm  klein_00025_red.pgm  klein_00026_red.pgm  klein_00027_red.pgm  klein_00028_red.pgm  klein_00029_red.pgm  klein_00030_red.pgm  klein_00031_red.pgm  klein_00032_red.pgm  klein_00033_red.pgm  klein_00034_red.pgm  klein_00035_red.pgm  klein_00036_red.pgm  klein_00037_red.pgm  klein_00038_red.pgm  klein_00039_red.pgm  (+960 more)
npp2.xcodeproj/: project.pbxproj
src/: CMakeLists.txt
src/advanced/: AdvancedLayerTypes.cpp  AdvancedLayerTypes.h  Sources.cmake
src/core/: BasicLayerTypes.cpp  BasicLayerTypes.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  NPPException.cpp  NPPException.h  Sources.cmake  functions.cpp  functions.h  npp2.cpp  npp2.h
src/deep/: DeepAutoEncoder.cpp  DeepAutoEncoder.h  NetGenerator.cpp  NetGenerator.h  Sources.cmake
src/util/: LayerRegistry.cpp  LayerRegistry.h  PatternSet.cpp  PatternSet.h  Registry.cpp  Registry.h  Sources.cmake  random.h
